Fixing split section mobile padding.

--- a/zenctuary-theme-starter/blocks/zen-split-showcase/style.scss
+++ b/zenctuary-theme-starter/blocks/zen-split-showcase/style.scss
@@ -226,7 +226,8 @@
 		gap: 32px;
 	}
 
-	.zen-split-showcase__content-column {
+	.wp-block-zenctuary-zen-split-showcase .zen-split-showcase__content-column,
+	.wp-block-zenctuary-zenctuary-split-showcase .zen-split-showcase__content-column {
 		padding: 36px 26px !important;
 	}
 
